# either_trait_macro

./: Cargo.toml  README.md
src/: lib.rs
tests/: test.rs
