[package]
name = "either_trait_macro"
version = "0.1.0"
authors = ["Administrator"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.6"
quote = "1.0.2"
syn = { version = "1.0.11", features = ["fold", "full"] }

[dev-dependencies]
either = "1.5.3"
