[package]
name = "either_trait_macro"
version = "0.1.1"
authors = ["AlephAlpha <alephalpha911@gmail.com>"]
edition = "2018"
description = "An attribute-like macro to implement traits for Either."
homepage = "https://github.com/AlephAlpha/either_trait_macro"
repository = "https://github.com/AlephAlpha/either_trait_macro"
license = "MIT"
readme = "README.md"
keywords = ["either"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["fold", "full"] }

[dev-dependencies]
either = "1.5.3"
